Fix for image stretching to container height on load

--- a/src/components/image/image.scss
+++ b/src/components/image/image.scss
@@ -62,16 +62,12 @@ gx-image {
     @include transition-properties();
   }
 
-  > .gx-image-container,
-  .gx-image-container > .gx-image-no-auto-grow-container {
-    & > .inner-image {
-      display: block;
-      width: 100%;
-      height: 100%;
+  .inner-image {
+    width: 100%;
+    height: 100%;
 
-      // Default Scale Type = Fit
-      object-fit: var(--image-scale-type, contain);
-    }
+    // Default Scale Type = Fit
+    object-fit: var(--image-scale-type, contain);
   }
 
   > .gx-image-container > .gx-image-tile {
